# korchindex

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: backfill-checkpoints.yml  backfill-season-open.yml  deploy.yml  diagnose-tickers.yml  update-prices.yml
assets/: index-CaQQZso4.css  index-MUgFRwhZ.js
backend/: .env.example  Dockerfile  LEARNING.md  README.md  docker-compose.yml  pyproject.toml
backend/app/: cache.py  circuit.py  config.py  db.py  main.py
backend/app/ingestion/: ingest_job.py  yahoo_client.py
backend/app/models/: schemas.py
backend/app/routers/: api.py
backend/app/services/: cohorts_repo.py  live_repo.py  seasons_repo.py
backend/migrations/: 0001_init.sql  0002_live_and_reporting.sql  migrate.py
backend/scripts/: derive_cohorts.py  seed_from_json.py
backend/scripts/derived/: cohort_memberships.json
backend/tests/: test_api.py  test_cache_and_breaker.py
public/: CNAME
public/live/: prices.json
scripts/: backfill-checkpoints.mjs  backfill-season-open.mjs  diagnose-tickers.mjs  update-prices.mjs
src/: App.jsx  styles.css
src/components/: ArchiveY1.jsx  Dashboard.jsx  FY26.jsx  LineChart.jsx  Live.jsx  Newsletter.jsx
src/data/: groups.json  hold.json  year1.json  year2.json  year3.json
